tests/sumo/meso/junction_control/tls_coordination/bad/control.limited/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_20_0+0793-91f7adb8122 started with time: 0.00.
Simulation ended at time: 123.00.
Reason: All vehicles have left the simulation.
Performance:
 Duration: 0.01s
 Real time factor: 12300
 UPS: 73800.000000
Vehicles:
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 12.34
 Duration: 24.60
 WaitingTime: 0.37
 TimeLoss: 2.62
 DepartDelay: 9.33
